# youtube-vision-transcriber

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent.py  fastagent.config.yaml  fastagent.secrets.yaml.example  pyproject.toml  video_transcriber_mcp.py  youtube_mcp.py
.github/ISSUE_TEMPLATE/: bug_report.md
prompts/: transcribe.txt  writer.txt
