[project]
name = "youtube-video-to-knowledge-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "deprecated>=1.3.1",
    "fast-agent-mcp==0.4.31",
    "fastmcp==2.13.1",
    "python-dotenv>=1.2.1",
    "yt-dlp==2025.11.12",
]


